charts/nutweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutweb
  labels:
    app.kubernetes.io/name: nutweb
spec:
  replicas: 0
  selector:
    matchLabels:
      app: nutweb
      app.kubernetes.io/name: nutweb
  template:
    metadata:
      labels:
        app: nutweb
        app.kubernetes.io/name: nutweb
    spec:
      containers:
        - name: nutweb
          image: ghcr.io/superioone/nut_webgui:latest
          ports:
            - containerPort: 9000
          startupProbe:
            httpGet:
              path: /probes/readiness
              port: 9000
            initialDelaySeconds: 5
            failureThreshold: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /probes/health
              port: 9000
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /probes/readiness
              port: 9000
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 30
