charts/nutweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutweb
  labels:
    app: nutweb
spec:
  selector:
    app: nutweb
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
