charts/nutweb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nutweb
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - nutweb.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nutweb
      namespace: nutweb
      port: 9000
